# VenusOS_BLE

./: LICENSE  README.md  pyproject.toml
docs/: PROJECT_STATUS.md  SUPPORTED_DEVICES.md  VENUS_OS.md
examples/: config.example.toml  config.venus.example.toml
src/victron_ble/: scanner.py
src/victron_ble/devices/: base.py
src/victron_ble_mqtt_gateway/: __main__.py  bluez_scanner.py  bridge.py  config.py  influxdb.py  mqtt.py  scanner.py  topics.py  venus_dbus.py
systemd/: victron-ble-mqtt-gateway.service
venus-os/: install-service.sh
venus-os/service/: run
venus-os/service/log/: run
